--- a/index.html
+++ b/index.html
@@ -2,25 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OOP.Classes</title>
-    <style>
-      body {
-        background: #212121;
-      }
-      h1 {
-        font-family: 'monospace';
-        font-size: 50px;
-        text-align: center;
-        color: #ffee00f6;
-        padding-top: 100px;
-      }
-    </style>
+    <title>Homework 7</title>
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-    <h1>javascript</h1>
-    <script src="./js/task-1.js" defer></script>
-    <script src="./js/task-2.js" defer></script>
-    <script src="./js/task-3.js" defer></script>
+    <ul>
+      <li><a href="./task-1.html">Task 1</a></li>
+      <li><a href="./task-2.html">Task 2</a></li>
+      <li><a href="./task-3.html">Task 3</a></li>
+      <li><a href="./task-4.html">Task 4</a></li>
+      <li><a href="./task-5.html">Task 5</a></li>
+      <li><a href="./task-6.html">Task 6</a></li>
+    </ul>
   </body>
 </html>
