--- a/task-4.html
+++ b/task-4.html
@@ -11,14 +11,16 @@
     <p><a href="./index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
-        Email
-        <input type="email" name="email" />
-      </label>
-      <label>
-        Password
-        <input type="password" name="password" />
-      </label>
+      <div class="form-container">
+        <label>
+          Email
+          <input type="email" name="email" />
+        </label>
+        <label>
+          Password
+          <input type="password" name="password" />
+        </label>
+      </div>
       <button type="submit">Login</button>
     </form>
 
